--- a/package.json
+++ b/package.json
@@ -1,7 +1,52 @@
 {
   "name": "vue3-gravatar",
   "version": "3.0.0",
+  "description": "Vue 3 Gravatar",
+  "main": "./dist/index.common.js",
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "build-lib": "vue-cli-service build --target lib --name index ./src/index.js"
+  },
+  "author": "Leo Silvestru",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/elemsio/vue3-gravatar"
+  },
+  "keywords": [
+    "vue3",
+    "gravatar"
+  ],
+  "license": "MIT",
   "dependencies": {
     "md5": "^2.3.0"
-  }
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.0.0"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
